Add website content generated from `2c66a74fd712976b2111bad6719d6649553b0cbf`

--- a/release-notes.html
+++ b/release-notes.html
@@ -385,6 +385,9 @@
 <p>Fix script resolution failure when the <code>Scripts</code> element is placed after a <code>ScriptRef</code> in the configuration. (<a href="https://github.com/apache/logging-log4j2/issues/3336">3336</a>)</p>
 </li>
 <li>
+<p>Fix potential memory leak involving <code>LogBuilder</code> in Log4j API to Logback bridge. (<a href="https://github.com/apache/logging-log4j2/issues/3819">3819</a>)</p>
+</li>
+<li>
 <p>Corrected an incorrect placeholder count in the AbstractDriverManagerConnectionSource debug log message to prevent unnecessary warnings. (<a href="https://github.com/apache/logging-log4j2/issues/3828">3828</a>)</p>
 </li>
 </ul>
