Add website content generated from `2b1d4692faa03c3541e23cd194507bc3d2622bfa`

--- a/release-notes.html
+++ b/release-notes.html
@@ -358,6 +358,16 @@
 <p>This release&#8230;&#8203;</p>
 </div>
 <div class="sect2">
+<h3 id="release-notes-2-x-x-added"><a class="anchor" href="#release-notes-2-x-x-added"></a>Added</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Add and export <code>org.apache.logging.log4j.core.pattern.NamedInstantPattern</code> enabling users to programmatically access named date &amp; time patterns supported by Pattern Layout (<a href="https://github.com/apache/logging-log4j2/pull/3789">3789</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
 <h3 id="release-notes-2-x-x-changed"><a class="anchor" href="#release-notes-2-x-x-changed"></a>Changed</h3>
 <div class="ulist">
 <ul>
