Add website content generated from `61ec36abd44b7c7d9b62baecd69698ee30caee92`

--- a/manual/configuration.html
+++ b/manual/configuration.html
@@ -1283,7 +1283,7 @@ See <a href="../plugin-reference.html#org-apache-logging-log4j_log4j-core_org-ap
 <tbody>
 <tr>
 <th class="tableblock halign-left valign-top"><p class="tableblock">Type</p></th>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>int</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>int</code> (seconds)</p></td>
 </tr>
 <tr>
 <th class="tableblock halign-left valign-top"><p class="tableblock">Default value</p></th>
@@ -1292,7 +1292,7 @@ See <a href="../plugin-reference.html#org-apache-logging-log4j_log4j-core_org-ap
 </tbody>
 </table>
 <div class="paragraph">
-<p>Determines the polling interval used by Log4j to check for changes to the configuration file.
+<p>Determines the polling interval, in seconds, used by Log4j to check for changes to the configuration file.
 If a change in the configuration file is detected, Log4j automatically reconfigures the logger context.
 If set to <code>0</code>, polling is disabled.</p>
 </div>
