Add website content generated from `286191e5253da635c271053e8d3b6f433b00c054`

--- a/release-notes.html
+++ b/release-notes.html
@@ -400,6 +400,9 @@
 <li>
 <p>Corrected an incorrect placeholder count in the AbstractDriverManagerConnectionSource debug log message to prevent unnecessary warnings. (<a href="https://github.com/apache/logging-log4j2/issues/3828">3828</a>)</p>
 </li>
+<li>
+<p>Fix missing newlines in default logging configuration for log4j-core. (<a href="https://github.com/apache/logging-log4j2/issues/3835">3835</a>)</p>
+</li>
 </ul>
 </div>
 </div>
