--- a/release-notes.html
+++ b/release-notes.html
@@ -403,6 +403,9 @@
 <li>
 <p>Fix missing newlines in default logging configuration for log4j-core. (<a href="https://github.com/apache/logging-log4j2/issues/3835">3835</a>)</p>
 </li>
+<li>
+<p>Fix missing default <code>Target</code> value in Console Appender. (<a href="https://github.com/apache/logging-log4j2/pull/3852">3852</a>)</p>
+</li>
 </ul>
 </div>
 </div>
