--- a/release-notes.html
+++ b/release-notes.html
@@ -419,6 +419,16 @@
 </ul>
 </div>
 </div>
+<div class="sect2">
+<h3 id="release-notes-2-x-x-updated"><a class="anchor" href="#release-notes-2-x-x-updated"></a>Updated</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Update <code>org.gradlex:gradle-module-metadata-maven-plugin</code> to version <code>1.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3811">3811</a>)</p>
+</li>
+</ul>
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
