Add website content generated from `74c9418d57f0bb3548d21e41675a06f60786e618`

--- a/release-notes.html
+++ b/release-notes.html
@@ -426,6 +426,9 @@
 <li>
 <p>Update <code>org.gradlex:gradle-module-metadata-maven-plugin</code> to version <code>1.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3811">3811</a>)</p>
 </li>
+<li>
+<p>Update <code>org.xerial.snappy:snappy-java</code> to version <code>1.1.10.8</code> (<a href="https://github.com/apache/logging-log4j2/pull/3841">3841</a>)</p>
+</li>
 </ul>
 </div>
 </div>
