Add website content generated from `187f38cd897b0f5a16fbfc68f5860935f4a7fe23`

--- a/release-notes.html
+++ b/release-notes.html
@@ -406,6 +406,9 @@
 <li>
 <p>Fix missing default <code>Target</code> value in Console Appender. (<a href="https://github.com/apache/logging-log4j2/pull/3852">3852</a>)</p>
 </li>
+<li>
+<p>Discard the sub-second part while obtaining the initial time (i.e., creation time) of a file in <code>RollingFileManager</code> (<a href="https://github.com/apache/logging-log4j2/issues/3068">3068</a>, <a href="https://github.com/apache/logging-log4j2/pull/3872">3872</a>)</p>
+</li>
 </ul>
 </div>
 </div>
