Add website content generated from `8e80e9e37a6d0294e254f2227638d6384fb8cf84`

--- a/release-notes.html
+++ b/release-notes.html
@@ -409,6 +409,9 @@
 <li>
 <p>Discard the sub-second part while obtaining the initial time (i.e., creation time) of a file in <code>RollingFileManager</code> (<a href="https://github.com/apache/logging-log4j2/issues/3068">3068</a>, <a href="https://github.com/apache/logging-log4j2/pull/3872">3872</a>)</p>
 </li>
+<li>
+<p>Fix the <code>com.google.errorprone:error_prone_annotations</code> dependency whose version property gets erased due to flattening (<a href="https://github.com/apache/logging-log4j2/issues/3779">3779</a>, <a href="https://github.com/apache/logging-log4j2/pull/3785">3785</a>, <a href="https://github.com/apache/logging-log4j2/pull/3905">3905</a>)</p>
+</li>
 </ul>
 </div>
 </div>
