Add website content generated from `d13b56a083e2acf1c6f119413ee849d82f4a38b7`

--- a/release-notes.html
+++ b/release-notes.html
@@ -433,6 +433,9 @@
 <p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version `` (<a href="https://github.com/apache/logging-log4j2/pull/3847">3847</a>)</p>
 </li>
 <li>
+<p>Update <code>org.apache.commons:commons-lang3</code> to version <code>3.18.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3815">3815</a>)</p>
+</li>
+<li>
 <p>Update <code>org.gradlex:gradle-module-metadata-maven-plugin</code> to version <code>1.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3811">3811</a>)</p>
 </li>
 <li>
