--- a/release-notes.html
+++ b/release-notes.html
@@ -415,6 +415,9 @@
 <li>
 <p>Fix the <code>com.google.errorprone:error_prone_annotations</code> dependency whose version property gets erased due to flattening (<a href="https://github.com/apache/logging-log4j2/issues/3779">3779</a>, <a href="https://github.com/apache/logging-log4j2/pull/3785">3785</a>, <a href="https://github.com/apache/logging-log4j2/pull/3905">3905</a>)</p>
 </li>
+<li>
+<p>Fix detection of throwable converters inside nested patterns when applying <code>alwaysWriteExceptions</code>. (<a href="https://github.com/apache/logging-log4j2/pull/3920">3920</a>)</p>
+</li>
 </ul>
 </div>
 </div>
