Add website content generated from `9b9a0d4350ab046c8f1616e90095ff222750f333`

--- a/release-notes.html
+++ b/release-notes.html
@@ -418,6 +418,9 @@
 <li>
 <p>Fix detection of throwable converters inside nested patterns when applying <code>alwaysWriteExceptions</code>. (<a href="https://github.com/apache/logging-log4j2/pull/3920">3920</a>)</p>
 </li>
+<li>
+<p>Fix parsing and merging of literals in <code>InstantPatternDynamicFormatter</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3930">3930</a>)</p>
+</li>
 </ul>
 </div>
 </div>
