--- a/release-notes.html
+++ b/release-notes.html
@@ -385,7 +385,16 @@
 <p>Discard the sub-second part while obtaining the initial time (i.e., creation time) of a file in <code>RollingFileManager</code> (<a href="https://github.com/apache/logging-log4j2/issues/3068">3068</a>, <a href="https://github.com/apache/logging-log4j2/pull/3872">3872</a>)</p>
 </li>
 <li>
+<p>Fix Pattern Layout exception stack trace converters to no longer prepend newlines based on context (<a href="https://github.com/apache/logging-log4j2/issues/3873">3873</a>, <a href="https://github.com/apache/logging-log4j2/pull/3919">3919</a>)</p>
+</li>
+<li>
 <p>Fix the <code>com.google.errorprone:error_prone_annotations</code> dependency whose version property gets erased due to flattening (<a href="https://github.com/apache/logging-log4j2/issues/3779">3779</a>, <a href="https://github.com/apache/logging-log4j2/pull/3785">3785</a>, <a href="https://github.com/apache/logging-log4j2/issues/3822">3822</a>, <a href="https://github.com/apache/logging-log4j2/pull/3905">3905</a>)</p>
+</li>
+<li>
+<p>Fix detection of <code>Throwable</code> converters inside nested Pattern Layout patterns when applying <code>alwaysWriteExceptions</code> (<a href="https://github.com/apache/logging-log4j2/pull/3920">3920</a>)</p>
+</li>
+<li>
+<p>Fix parsing and merging of literals in <code>InstantPatternDynamicFormatter</code> (<a href="https://github.com/apache/logging-log4j2/issues/3930">3930</a>, <a href="https://github.com/apache/logging-log4j2/pull/3932">3932</a>)</p>
 </li>
 </ul>
 </div>
